--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-    <h1> Asm Junaid</h1>
-    <h3>Bogura Polytechnic Institute</h3>
+    <section>
+        <div>
+            <h1>Helo <span id="welcome">Welcome</span> to</h1>
+            <h1> My Portfolio <span id="website">Website</span></h1>
+        </div>
+    </section>
 </body>
 </html>
