--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <h1 class="weltext"> My Portfolio <span id="website">Website</span></h1>
             <h2 id="name">Asm Junaid</h2>
             <p> Helo my name is Abu Saleh Md Junaid. I am a fronted web developer and I am currently a student of Bogura Polytechnic Instite, Bogura. I like to read books and if I get some free time I likes to do coding, travelling, fixing problems.</p>
+            <img id="image01" src="Image/my-bg2.png" >
         </div>
     </section>
 </body>
