added pic, bio, button

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 </head>
 <body>
     <section>
-        <div>
+        <div class="secpara">
             <h1 class="weltext">Helo <span id="welcome">Welcome</span> to</h1>
             <h1 class="weltext"> My Portfolio <span id="website">Website</span></h1>
-            <h2 id="name">Asm Junaid</h2>
+            <button id="hire">Hire Me</button>
             <p> Helo my name is Abu Saleh Md Junaid. I am a fronted web developer and I am currently a student of Bogura Polytechnic Instite, Bogura. I like to read books and if I get some free time I likes to do coding, travelling, fixing problems.</p>
+        </div>
+        <div1 class="secimg">
             <img id="image01" src="Image/my-bg2.png" >
         </div>
     </section>
