--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-    <section>
+    <section class="sec1">
         <div class="secpara">
             <h1 class="weltext">Helo <span id="welcome">Welcome</span> to</h1>
             <h1 class="weltext"> My Portfolio <span id="website">Website</span></h1>
-            <button id="hire">Hire Me</button>
             <p> Helo my name is Abu Saleh Md Junaid. I am a fronted web developer and I am currently a student of Bogura Polytechnic Instite, Bogura. I like to read books and if I get some free time I likes to do coding, travelling, fixing problems.</p>
+            <a id="hire" target="_blank" href="https://facebook.com/mdjunaidrafid">Hire Me</a>
         </div>
         <div1 class="secimg">
             <img id="image01" src="Image/my-bg2.png" >
