--- a/index.html
+++ b/index.html
@@ -12,14 +12,26 @@
 </head>
 <body>
     <section class="sec1">
-        <div class="secpara">
-            <h1 class="weltext">Helo <span id="welcome">Welcome</span> to</h1>
-            <h1 class="weltext"> My Portfolio <span id="website">Website</span></h1>
-            <p> Helo my name is Abu Saleh Md Junaid. I am a fronted web developer and I am currently a student of Bogura Polytechnic Instite, Bogura. I like to read books and if I get some free time I likes to do coding, travelling, fixing problems.</p>
-            <a id="hire" target="_blank" href="https://facebook.com/mdjunaidrafid">Hire Me</a>
+        <div class="sec1para">
+            <h1>Welcome To</h1>
+            <h1> <span class="color">Asm Junaid</span> World</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+            <a class="hire" target="_blank" href="https://facebook.com/mdjunaidrafid"> Hire Me</a>
         </div>
-        <div1 class="secimg">
-            <img id="image01" src="Image/my-bg2.png" >
+        <div class="sec1img">
+            <img src="Image/my-bg2.png">
+        </div>
+    </section>
+    <section class="sec2">
+        <div class="sec2img">
+            <img src="Image/my-bg2.png">
+        </div>
+        <div class="sec2para">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a target="_blank" href="https://facebook.com/mdjunaidrafid">Download Resume</a>
         </div>
     </section>
 </body>
